--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,10 +4,12 @@ html
     meta(charset='UTF-8')
     title=title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/semantic/dist/2.3.0/semantic.min.css')
-  body
+    link(rel='stylesheet', href='/semantic/dist/semantic.min.css')
+  body(ng-app="app")
     block content
 
 
       block javascripts
         script(src="/angular/angular.min.js")
+        script(src="/javascripts/main.js")
+        script(src="/javascripts/indexController.js")
